[gd_scene load_steps=91 format=2]

[ext_resource path="res://Enemy.gd" type="Script" id=1]
[ext_resource path="res://Assets/Skeleton/idle_00.png" type="Texture" id=2]
[ext_resource path="res://Assets/Skeleton/idle_01.png" type="Texture" id=3]
[ext_resource path="res://Assets/Skeleton/idle_02.png" type="Texture" id=4]
[ext_resource path="res://Assets/Skeleton/idle_03.png" type="Texture" id=5]
[ext_resource path="res://Assets/Skeleton/idle_04.png" type="Texture" id=6]
[ext_resource path="res://Assets/Skeleton/idle_05.png" type="Texture" id=7]
[ext_resource path="res://Assets/Skeleton/idle_06.png" type="Texture" id=8]
[ext_resource path="res://Assets/Skeleton/idle_07.png" type="Texture" id=9]
[ext_resource path="res://Assets/Skeleton/idle_08.png" type="Texture" id=10]
[ext_resource path="res://Assets/Skeleton/idle_09.png" type="Texture" id=11]
[ext_resource path="res://Assets/Skeleton/idle_10.png" type="Texture" id=12]
[ext_resource path="res://Assets/Skeleton/idle_11.png" type="Texture" id=13]
[ext_resource path="res://Assets/Skeleton/idle_12.png" type="Texture" id=14]
[ext_resource path="res://Assets/Skeleton/idle_13.png" type="Texture" id=15]
[ext_resource path="res://Assets/Skeleton/idle_14.png" type="Texture" id=16]
[ext_resource path="res://Assets/Skeleton/idle_15.png" type="Texture" id=17]
[ext_resource path="res://Assets/Skeleton/idle_16.png" type="Texture" id=18]
[ext_resource path="res://Assets/Skeleton/idle_17.png" type="Texture" id=19]
[ext_resource path="res://Assets/Skeleton/walk_00.png" type="Texture" id=20]
[ext_resource path="res://Assets/Skeleton/walk_01.png" type="Texture" id=21]
[ext_resource path="res://Assets/Skeleton/walk_02.png" type="Texture" id=22]
[ext_resource path="res://Assets/Skeleton/walk_03.png" type="Texture" id=23]
[ext_resource path="res://Assets/Skeleton/walk_04.png" type="Texture" id=24]
[ext_resource path="res://Assets/Skeleton/walk_05.png" type="Texture" id=25]
[ext_resource path="res://Assets/Skeleton/walk_06.png" type="Texture" id=26]
[ext_resource path="res://Assets/Skeleton/walk_07.png" type="Texture" id=27]
[ext_resource path="res://Assets/Skeleton/walk_08.png" type="Texture" id=28]
[ext_resource path="res://Assets/Skeleton/walk_09.png" type="Texture" id=29]
[ext_resource path="res://Assets/Skeleton/walk_10.png" type="Texture" id=30]
[ext_resource path="res://Assets/Skeleton/walk_11.png" type="Texture" id=31]
[ext_resource path="res://Assets/Skeleton/walk_12.png" type="Texture" id=32]
[ext_resource path="res://Assets/Skeleton/walk_13.png" type="Texture" id=33]
[ext_resource path="res://Assets/Skeleton/walk_14.png" type="Texture" id=34]
[ext_resource path="res://Assets/Skeleton/walk_15.png" type="Texture" id=35]
[ext_resource path="res://Assets/Skeleton/walk_16.png" type="Texture" id=36]
[ext_resource path="res://Assets/Skeleton/walk_17.png" type="Texture" id=37]
[ext_resource path="res://Assets/Skeleton/walk_18.png" type="Texture" id=38]
[ext_resource path="res://Assets/Skeleton/walk_19.png" type="Texture" id=39]
[ext_resource path="res://Assets/Skeleton/attack_00.png" type="Texture" id=40]
[ext_resource path="res://Assets/Skeleton/attack_01.png" type="Texture" id=41]
[ext_resource path="res://Assets/Skeleton/attack_02.png" type="Texture" id=42]
[ext_resource path="res://Assets/Skeleton/attack_03.png" type="Texture" id=43]
[ext_resource path="res://Assets/Skeleton/attack_04.png" type="Texture" id=44]
[ext_resource path="res://Assets/Skeleton/attack_05.png" type="Texture" id=45]
[ext_resource path="res://Assets/Skeleton/attack_06.png" type="Texture" id=46]
[ext_resource path="res://Assets/Skeleton/attack_07.png" type="Texture" id=47]
[ext_resource path="res://Assets/Skeleton/attack_08.png" type="Texture" id=48]
[ext_resource path="res://Assets/Skeleton/attack_09.png" type="Texture" id=49]
[ext_resource path="res://Assets/Skeleton/attack_10.png" type="Texture" id=50]
[ext_resource path="res://Assets/Skeleton/attack_11.png" type="Texture" id=51]
[ext_resource path="res://Assets/Skeleton/attack_12.png" type="Texture" id=52]
[ext_resource path="res://Assets/Skeleton/attack_13.png" type="Texture" id=53]
[ext_resource path="res://Assets/Skeleton/attack_14.png" type="Texture" id=54]
[ext_resource path="res://Assets/Skeleton/attack_15.png" type="Texture" id=55]
[ext_resource path="res://Assets/Skeleton/attack_16.png" type="Texture" id=56]
[ext_resource path="res://Assets/Skeleton/attack_17.png" type="Texture" id=57]
[ext_resource path="res://Assets/Skeleton/attack_18.png" type="Texture" id=58]
[ext_resource path="res://Assets/Skeleton/attack_19.png" type="Texture" id=59]
[ext_resource path="res://Assets/Skeleton/hurt_00.png" type="Texture" id=60]
[ext_resource path="res://Assets/Skeleton/hurt_01.png" type="Texture" id=61]
[ext_resource path="res://Assets/Skeleton/hurt_02.png" type="Texture" id=62]
[ext_resource path="res://Assets/Skeleton/hurt_03.png" type="Texture" id=63]
[ext_resource path="res://Assets/Skeleton/hurt_04.png" type="Texture" id=64]
[ext_resource path="res://Assets/Skeleton/hurt_05.png" type="Texture" id=65]
[ext_resource path="res://Assets/Skeleton/hurt_06.png" type="Texture" id=66]
[ext_resource path="res://Assets/Skeleton/hurt_07.png" type="Texture" id=67]
[ext_resource path="res://Assets/Skeleton/hurt_08.png" type="Texture" id=68]
[ext_resource path="res://Assets/Skeleton/hurt_09.png" type="Texture" id=69]
[ext_resource path="res://Assets/Skeleton/hurt_10.png" type="Texture" id=70]
[ext_resource path="res://Assets/Skeleton/hurt_11.png" type="Texture" id=71]
[ext_resource path="res://Assets/Skeleton/hurt_12.png" type="Texture" id=72]
[ext_resource path="res://Assets/Skeleton/hurt_13.png" type="Texture" id=73]
[ext_resource path="res://Assets/Skeleton/hurt_14.png" type="Texture" id=74]
[ext_resource path="res://Assets/Skeleton/hurt_15.png" type="Texture" id=75]
[ext_resource path="res://Assets/Skeleton/die_00.png" type="Texture" id=76]
[ext_resource path="res://Assets/Skeleton/die_01.png" type="Texture" id=77]
[ext_resource path="res://Assets/Skeleton/die_02.png" type="Texture" id=78]
[ext_resource path="res://Assets/Skeleton/die_03.png" type="Texture" id=79]
[ext_resource path="res://Assets/Skeleton/die_04.png" type="Texture" id=80]
[ext_resource path="res://Assets/Skeleton/die_05.png" type="Texture" id=81]
[ext_resource path="res://Assets/Skeleton/die_06.png" type="Texture" id=82]
[ext_resource path="res://Assets/Skeleton/die_07.png" type="Texture" id=83]
[ext_resource path="res://Assets/Skeleton/die_08.png" type="Texture" id=84]
[ext_resource path="res://Assets/Skeleton/die_09.png" type="Texture" id=85]
[ext_resource path="res://Assets/Skeleton/die_10.png" type="Texture" id=86]
[ext_resource path="res://Assets/Skeleton/die_11.png" type="Texture" id=87]
[ext_resource path="res://Assets/Skeleton/die_12.png" type="Texture" id=88]

[sub_resource type="RectangleShape2D" id=1]

extents = Vector2( 6.04941, 12.7974 )

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ) ],
"loop": true,
"name": "idle",
"speed": 12.0
}, {
"frames": [ ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ) ],
"loop": true,
"name": "walk",
"speed": 12.0
}, {
"frames": [ ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 47 ), ExtResource( 48 ), ExtResource( 49 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 52 ), ExtResource( 53 ), ExtResource( 54 ), ExtResource( 55 ), ExtResource( 56 ), ExtResource( 57 ), ExtResource( 58 ), ExtResource( 59 ) ],
"loop": false,
"name": "attack",
"speed": 12.0
}, {
"frames": [ ExtResource( 60 ), ExtResource( 61 ), ExtResource( 62 ), ExtResource( 63 ), ExtResource( 64 ), ExtResource( 65 ), ExtResource( 66 ), ExtResource( 67 ), ExtResource( 68 ), ExtResource( 69 ), ExtResource( 70 ), ExtResource( 71 ), ExtResource( 72 ), ExtResource( 73 ), ExtResource( 74 ), ExtResource( 75 ) ],
"loop": false,
"name": "hurt",
"speed": 12.0
}, {
"frames": [ ExtResource( 76 ), ExtResource( 77 ), ExtResource( 78 ), ExtResource( 79 ), ExtResource( 80 ), ExtResource( 81 ), ExtResource( 82 ), ExtResource( 83 ), ExtResource( 84 ), ExtResource( 85 ), ExtResource( 86 ), ExtResource( 87 ), ExtResource( 88 ) ],
"loop": false,
"name": "die",
"speed": 12.0
} ]

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 8
collision_mask = 10
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 2, 3 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "idle"

[node name="edge_detector" type="RayCast2D" parent="."]
position = Vector2( 5.57362, 0.661276 )
enabled = true
cast_to = Vector2( 0, 17 )
collision_mask = 2

[node name="after_death_timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[connection signal="timeout" from="after_death_timer" to="." method="_on_after_death_timer_timeout"]
